页面湖人色调

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon1.ico">
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
-    <title>宁i在线平台</title>
+    <title>宁i--有球必应</title>
   </head>
   <body>
     <noscript>
